[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/font/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=2]
[ext_resource path="res://resources/font/OpenSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/Game buttons/question_panel.png" type="Texture" id=5]
[ext_resource path="res://resources/icons/GoBack.png" type="Texture" id=6]
[ext_resource path="res://offline_levels/level9/tutorial_manager.gd" type="Script" id=7]
[ext_resource path="res://resources/Game buttons/touch/question_mark.png" type="Texture" id=8]
[ext_resource path="res://resources/Game buttons/touch/close_task_button.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=99]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 296, 226 )

[sub_resource type="Theme" id=98]
Panel/styles/panel = SubResource( 99 )

[sub_resource type="DynamicFont" id=102]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=106]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=101]
bg_color = Color( 1, 0.982171, 0.652344, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.956863, 0.643137, 0.490196, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id=104]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1080, 1080 )

[sub_resource type="StyleBoxTexture" id=105]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1080, 1080 )

[sub_resource type="StyleBoxTexture" id=103]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="tutorial_popup" type="CanvasLayer"]

[node name="tutorials" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="tutorials"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 666, 375 )
rect_scale = Vector2( 1.0047, 1 )
color = Color( 0, 0, 0, 0.588235 )

[node name="main_popup" type="Panel" parent="tutorials"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -742.0
margin_top = -469.0
margin_right = 742.0
margin_bottom = 469.0
rect_min_size = Vector2( 666, 375 )
theme = SubResource( 98 )

[node name="title" type="Label" parent="tutorials/main_popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -346.5
margin_top = 74.0
margin_right = 353.5
margin_bottom = 154.0
rect_min_size = Vector2( 700, 80 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 102 )
text = "TUTORIALS"
align = 1
valign = 1
autowrap = true

[node name="buttons_container" type="VBoxContainer" parent="tutorials/main_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -709.0
margin_top = -204.0
margin_right = 709.0
margin_bottom = 446.0
custom_constants/separation = 25
alignment = 1

[node name="wire_crimping" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 22.0
margin_right = 1418.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "How to craft Ethernet Cables?"

[node name="buying_materials" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 127.0
margin_right = 1418.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "Where can i get materials for crafting?"

[node name="connect_devices" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 232.0
margin_right = 1418.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "How to connect two devices?"

[node name="configure_ip" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 337.0
margin_right = 1418.0
margin_bottom = 417.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "How to configure the IP Address of a PC?"

[node name="configure_router" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 442.0
margin_right = 1418.0
margin_bottom = 522.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "How to configure a router?"

[node name="ping_device" type="Button" parent="tutorials/main_popup/buttons_container"]
margin_top = 547.0
margin_right = 1418.0
margin_bottom = 627.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.721569, 0.231373, 0.368627, 1 )
custom_fonts/font = SubResource( 106 )
custom_styles/hover = SubResource( 101 )
custom_styles/normal = SubResource( 101 )
text = "How to ping a device?"

[node name="open_tutorials" type="Button" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 125, 125 )
custom_styles/hover = SubResource( 104 )
custom_styles/pressed = SubResource( 105 )
custom_styles/normal = SubResource( 104 )
toggle_mode = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="back_button" type="Button" parent="VideoPlayer"]
modulate = Color( 0.937255, 0.282353, 0.282353, 1 )
margin_left = 25.0
margin_top = 25.0
margin_right = 175.0
margin_bottom = 175.0
rect_min_size = Vector2( 150, 150 )
custom_styles/hover = SubResource( 103 )
custom_styles/normal = SubResource( 103 )

[connection signal="pressed" from="tutorials/main_popup/buttons_container/wire_crimping" to="tutorials" method="_on_wire_crimping_pressed"]
[connection signal="pressed" from="tutorials/main_popup/buttons_container/buying_materials" to="tutorials" method="_on_buying_materials_pressed"]
[connection signal="pressed" from="tutorials/main_popup/buttons_container/connect_devices" to="tutorials" method="_on_connect_devices_pressed"]
[connection signal="pressed" from="tutorials/main_popup/buttons_container/configure_ip" to="tutorials" method="_on_configure_ip_pressed"]
[connection signal="pressed" from="tutorials/main_popup/buttons_container/configure_router" to="tutorials" method="_on_configure_router_pressed"]
[connection signal="pressed" from="tutorials/main_popup/buttons_container/ping_device" to="tutorials" method="_on_ping_device_pressed"]
[connection signal="toggled" from="open_tutorials" to="tutorials" method="_on_open_tutorials_toggled"]
[connection signal="finished" from="VideoPlayer" to="tutorials" method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="VideoPlayer/back_button" to="tutorials" method="_on_back_button_pressed"]
